--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -4,8 +4,13 @@
   {% block content%}
 
             <section class="conteudo">
+              {% for message in messages %}
+            <div class="alert alert-primary">
+                    <p id="messages">{{message}}</p>
+            </div>
+            {% endfor %}
                 <section class="banner">
-                    <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
+                  <img class="banner__imagem" src="{% static '/assets/imagens/Banner(2).png' %}" alt="banner Alura Space">
                     <h1 class="banner__titulo"> A galeria mais completa de fotos do espaço!</h1>
                 </section>
                 <section class="tags">
